--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head> 
     <script src="https://kit.fontawesome.com/9e9a923395.js" crossorigin="anonymous"></script>
     <title>MoR</title>
-         <link rel="Stylesheet" href="Depop.css" type="text/css">
+         <link rel="Stylesheet" href="index.css" type="text/css">
             <body>
                     
                         <ul>
